# serpent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_object.py
core/: CMakeLists.txt
core/include/serpent/core/: AbiFactory.h  IProcessReader.h  IPythonABI.h  MemRegion.h  ReaderFactory.h
core/include/serpent/domain/: DiffEngine.h  ObjectGraph.h  PyObjectNode.h  Snapshot.h  SnapshotManager.h
core/include/serpent/testing/: MockProcessReader.h  MockPythonABI.h
core/src/: AbiFactory.cpp  Readerfactory.cpp
core/src/domain/: DiffEngine.cpp  ObjectGraph.cpp  Snapshot.cpp  SnapshotManager.cpp
plugins/: CMakeLists.txt
plugins/abi_cp310/: CMakeLists.txt  Py310ABI.cpp
plugins/reader_linux/: CMakeLists.txt  LinuxReader.cpp
plugins/reader_macos/: CMakeLists.txt  MacOSReader.cpp
tests/: CMakeLists.txt
tests/domain/: ObjectGraph_build_test.cpp  Snapshot_test.cpp
tools/: CMakeLists.txt
tools/hello_serpent/: CMakeLists.txt  main.cpp
